style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins';
    text-decoration: none;
    scroll-behavior: smooth;
    list-style: none;
}

header{
    position: fixed;
    top: 1rem;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5rem;
    background-color: rgba(0, 0, 0, 0.8);
    backdrop-filter: blur(8px);
    color: white;
    padding: 0.5rem 1.5rem;
    border-radius: 3rem;
    z-index: 1000;
}
.logo{
    color: white;
    font-size: 1.3rem;
    font-weight: 600;
    text-wrap: nowrap;
    transition: 0.3s ease-in-out;
}
.logo .highlight {
  color: rgb(204, 161, 255);

}
.logo:hover{
    transform: scale(1.1);
}
.nav-links{
    display: flex;
    gap: 2rem;
}
li a{
    position: relative;
    color: white;
    font-weight: 300;
}
li a::before{
    position: absolute;
    content: '';
    width: 0;
    left: 0;
    height: 5px;
    top: 25px;
    border-radius: 1rem;
    transition: 0.3s ease-in-out;
    background: rgb(204, 161, 255);
}
li a:hover::before{
    width: 100%;
}
.visit-btn{
    padding: 0.8rem 1.5rem;
    border-radius: 3rem;
    border: none;
    font-weight: 500;
    font-size: 1rem;
    color: white;
    cursor: pointer;
    text-wrap: nowrap;
    transition: 0.3s ease-in-out;
    background: rgb(204, 161, 255);
}
.visit-btn:hover{
    background: rgb(204, 161, 255);
    transform: scale(1.03);
}
#menu-burger{
    font-size: 2rem;
    display: none;
}
section{
    min-height: 100vh;
    padding: 8rem 12%;
    width: 100%;
    position: relative;
    background-color: #f2f2f2;
}
.about{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #f2f2f2;
}
.about .about-container{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 2rem;
}
.about img{
    width: 22vw;
    border-radius: 50%;
}
.about .about-highlight{
  color: rgb(204, 161, 255);
}
.info-box{
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    justify-content: center;
    gap: 1rem;
}
.info-box h3{
    font-size: 1.8rem;
    font-weight: 500;
    opacity: 0.8;
}
.info-box h1{
    font-size: 4rem;
    font-weight: 600;
}
.socials{
    display: flex;
    gap: 1.2rem;
}
.socials i{
    font-size: 2.5rem;
    cursor: pointer;
    transition: 0.2s ease-in-out;
}
.socials i:hover{
    transform: scale(1.1);
}

.socials a{
    color:inherit
}

.socials a:visited{
    color: inherit;
}

.typing-text {
    font-size: 28px;
    font-weight: 600;
    min-width: 280px;
}

.typing-text {
    font-size: 28px;
    font-weight: 600;
    min-width: 280px;
}

.typing-text span {
    display: inline-block;
    overflow: hidden;
    white-space: nowrap;
    border-right: 2px solid rgb(204, 161, 255);
    width: 0ch;
    animation: typewriter 6s steps(18) 1s infinite;
}

@keyframes typewriter {
    0% { width: 0ch; }
    30% { width: 18ch; }
    60% { width: 18ch; }
    90% { width: 0ch; }
    100% { width: 0ch; }
}

.section-title{
    text-align: center;
    font-size: 4rem;
    font-weight: 600;
    margin-bottom: 3rem;
}

.experience-info{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5rem;
}

.experience img{
    width: 24vw;
    border-radius: 3rem;
}


.grid{
    display: grid;
    grid-template-columns: repeat(2,1fr);
    gap: 2rem;
}

.grid-card{
    border: 2px solid black;
    border-radius: 3rem;
    padding: 3rem;
    display: flex;
    flex-direction: column;
    align-items: baseline;
    justify-content: left;
    cursor: pointer;
    transition: 0.2s ease-in-out;
}

.grid-card:hover{
    transform: scale(1.02);
    background-color: rgb(240, 229, 253);
    color: rgb(0, 0, 0);
}

.grid-card i{
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

.grid-card span{
    font-size: 1.5rem;
    font-weight: 500;
}
.grid .date {
  color: rgb(204, 161, 255); 
}
.certificates-info{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5rem;
}

.certificates-grid{
    display: grid;
    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
    gap: 2rem;
}

.certificates-card{
    padding: 3rem 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    gap: 1.5rem;
    border: 2px solid black;
    border-radius: 3rem;
    cursor: pointer;
    transition: 0.3s ease-in-out;
}

.certificates-card:hover{
    transform: scale(1.02);
    background-color: rgb(240, 229, 253);
    color: rgb(0, 0, 0);
}

.certificates-card i{
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

.certificates-card span{
    font-size: 1.5rem;
    font-weight: 500;
    background: rgb(204, 161, 255);
}

.certificates img {
    align-items: center;
    margin-top: 15px;
    width: 10vw;
}

.certificates a{
    color:inherit
}

.certificates a:visited{
    color: inherit;
}

.publications-info{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5rem;
}

.publications-grid{
    display: grid;
    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
    gap: 2rem;
}

.publications-card{
    padding: 3rem 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    gap: 1.5rem;
    border: 2px solid black;
    border-radius: 3rem;
    cursor: pointer;
    transition: 0.3s ease-in-out;
}

.publications-card:hover{
    transform: scale(1.02);
    background-color: rgb(240, 229, 253);
    color: rgb(0, 0, 0);
}

.publications-card i{
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

.publications-card span{
    font-size: 1.5rem;
    font-weight: 500;

}

.publications img {
    align-items: center;
    margin-top: 15px;
    width: 10vw;
}

.publications a{
    color:inherit
}

.publications a:visited{
    color: inherit;
}
.sql-terminal {
    color: #d4d4d4;
    padding: 1rem;
    font-family: 'Fira Code', monospace;
    border-radius: 8px;
    max-width: 600px;
    overflow-x: auto;
    line-height: 1.6;
}

.sql-line {
    color: #db0000;
}

.keyword {
    color: #000000;
    font-weight: bold;
}

.identifier {
    color: rgb(204, 161, 255);
}

.punctuation {
    color: #d4d4d4;
}

.comment {
    color: #fb2a00;
    font-style: italic;
}

::-webkit-scrollbar{
    width: 20px;
}

::-webkit-scrollbar-track{
    background-color: rgb(219, 219, 219);
}

.footer {
  display: flex !important;
  justify-content: center !important;
  align-items: center;
  width: 100%;
  padding: 1em;
  background: #f0f0f0;
}

@media(max-width:1280px){
    header{
        padding: 1rem 2rem;
    }
    .about .about-container{
        gap: 3rem;
    }
    .experience-info{
        flex-direction: column;
    }
}

@media(max-width:768px){
    header{
        gap: 1rem;
        padding: 1rem 1rem;
    }
    header .logo{
        font-size: 1rem;
    }
    header .visit-btn{
        display: none;
    }
    .about-container{
        flex-direction: column;
    }
    .grid{
        grid-template-columns: repeat(1,1fr);
    }
    .experience-info img{
        width: 70vw;
    }
    .certificates img{
        width: 25vw;
    }
}

@media(max-width:600px){
    header #menu-burger{
        display: block;
    }
    .nav-links{
        position: absolute;
        top: 100%;
        margin-top: 1rem;
        width: 100%;
        padding: 1rem;
        color: white;
        display: flex;
        flex-direction: column;
        text-align: center;
        background: rgba(0, 0, 0, 0.9);
        border-radius: 3rem;
        display: none;
    }
    .nav-links li{
        margin-top: 1.5rem;
        padding: 1rem;
    }
    .nav-links.active{
        display: block;
    }
    header{
        padding: 1rem 5rem;
        gap: 8rem;
    }
    header .logo{
        font-size: 1.5rem;
    }
    .about-container img{
        width: 80vw;
    }
}

